--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -14,6 +14,7 @@
     "import math\n",
     "import nltk\n",
     "#nltk.download('popular')\n",
+    "import scipy.sparse as sp\n",
     "from nltk.corpus import treebank\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.parse.corenlp import CoreNLPParser\n",
@@ -52,37 +53,34 @@
     "#train_df['tagged'] = train_df['tok_wo_stop'].apply(nltk.pos_tag) #taking too much time, think of better way if possible\n",
     "\n",
     "# Bag of Words\n",
-    "token_list = [\" \".join(x) for x in train_df['tok_wo_stop']]"
+    "train_df['token_list'] = train_df['tok_wo_stop'].apply(lambda x : \" \".join(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# splitting data into training and test set\n",
-    "train_end = math.floor(0.8*len(token_list))\n",
-    "train_token_list = token_list[ : train_end]\n",
-    "test_token_list = token_list[train_end : ]\n",
-    "\n",
     "# converting text to features\n",
     "vectorizer = CountVectorizer(analyzer = \"word\",\n",
     "                            tokenizer = None,\n",
     "                            preprocessor = None,\n",
     "                            stop_words = None,\n",
-    "                            max_features = 1530)\n",
-    "train_features = vectorizer.fit_transform(train_token_list) #no aspect taken into account yet!\n",
-    "train_features = train_features.toarray()\n",
-    "test_features = vectorizer.fit_transform(test_token_list)\n",
-    "test_features = test_features.toarray()"
+    "                            min_df = 2)\n",
+    "sample = train_df[['token_list', 'aspect_term']]\n",
+    "features = sp.hstack(sample.apply(lambda col: vectorizer.fit_transform(col))) #no polarity of aspect taken into account yet!\n",
+    "features = features.toarray()\n",
+    "\n",
+    "# splitting features into training and test feature set (90:10)\n",
+    "train_end = math.floor(0.9*(train_df['token_list'].size))\n",
+    "train_features = features[:train_end]\n",
+    "test_features = features[train_end:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -95,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.43537414966\n"
+      "0.778280542986\n"
      ]
     }
    ],
